--- a/app/src/main/res/layout/activity_login_signup.xml
+++ b/app/src/main/res/layout/activity_login_signup.xml
@@ -8,11 +8,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginSignupActivity"
+    tools:context=".LoginSignupActivity">
 
-    >
-
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/user_login_fragment"
