--- a/app/src/main/res/layout/activity_employee.xml
+++ b/app/src/main/res/layout/activity_employee.xml
@@ -1,9 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    >
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EmployeeActivity">
+    tools:context=".EmployeeActivity"
+    android:background="@android:color/white"
+    >
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/employee_actv_horizontal_line_1"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.94"
+        />
+
+
+        <!--
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/employee_fragment_pager"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/employee_actv_horizontal_line_1"
+            android:visibility="gone"
+            />-->
+
+
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/employee_fragment_contoller"
+        android:layout_width="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/employee_actv_horizontal_line_1"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        tools:layout="@layout/fragment_home"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/employee_nav"
+
+        />
+
+
+    <me.ibrahimsn.lib.SmoothBottomBar
+        android:id="@+id/bottomBar"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/employee_actv_horizontal_line_1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:backgroundColor="@color/purple_700"
+        app:menu="@menu/bottom__nav"
+        app:indicatorRadius="10dp"
+        app:textColor="@android:color/white"
+        app:iconTint="@android:color/white"
+        android:elevation="200dp"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
