--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -53,7 +53,7 @@
 
 
 
-    <Button
+    <android.widget.Button
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -316,6 +316,7 @@
             app:lb_cornerRadius="32dp"
             app:lb_rippleEnable="true"
             app:lb_btnText="@string/Sign_Up"
+            android:stateListAnimator="@null"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
