--- a/app/src/main/res/layout/employee_home_recycler_item.xml
+++ b/app/src/main/res/layout/employee_home_recycler_item.xml
@@ -71,6 +71,16 @@
     <androidx.constraintlayout.widget.Guideline
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/employee_home_item_v11"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".1"
+
+        />
+
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/employee_home_item_v3"
         android:orientation="vertical"
         app:layout_constraintGuide_percent=".9"
@@ -139,20 +149,38 @@
         />
 
 
-
     <TextView
-        android:id="@+id/job_header"
+        android:id="@+id/job_date"
         app:layout_constraintStart_toStartOf="@id/employee_home_item_v1"
-        app:layout_constraintEnd_toStartOf="@id/employee_home_item_v5"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="20dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="10dp"
         android:gravity="start|center"
         android:textAllCaps="false"
-        android:text="Company name :"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
         android:textColor="@android:color/white"
-        android:textSize="16sp"
+        android:textSize="10sp"
+        android:background="@drawable/date_text_background"
+        />
+
+
+    <TextView
+        android:id="@+id/job_header"
+        app:layout_constraintStart_toStartOf="@id/employee_home_item_v1"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        app:layout_constraintTop_toBottomOf="@id/job_date"
+        android:layout_marginTop="10dp"
+        android:gravity="start|center"
+        android:paddingStart="5dp"
+        android:paddingEnd="2dp"
+        android:textAllCaps="false"
+        android:text="@string/company_name"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        android:background="@drawable/company_textview_background"
         />
 
     <TextView
@@ -176,9 +204,9 @@
         app:layout_constraintEnd_toEndOf="@id/employee_home_item_v3"
         android:layout_width="0dp"
         app:layout_constraintTop_toBottomOf="@id/job_header"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:textAlignment="center"
-        android:gravity="center"
+        android:gravity="start|center"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         android:textSize="16sp"
@@ -188,7 +216,7 @@
     <TextView
         android:id="@+id/job_needed_skills"
         app:layout_constraintStart_toStartOf="@id/employee_home_item_v1"
-
+        android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/job_type_desc"
         android:layout_height="20dp"
@@ -215,6 +243,7 @@
         android:textColor="@android:color/white"
         android:textSize="16sp"
         android:maxLines="10"
+        android:layout_marginTop="5dp"
         />
 
 
@@ -229,7 +258,7 @@
         android:clickable="true"
         android:focusable="true"
         android:background="@drawable/show_more_detail_effect"
-        android:layout_marginBottom="5dp"
+        android:layout_margin="5dp"
 
         >
 
@@ -291,6 +320,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:gravity="start"
+            android:textAlignment="textStart"
             />
 
         <hyogeun.github.com.colorratingbarlib.ColorRatingBar
@@ -300,9 +331,9 @@
             android:id="@+id/rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:changeable="true"
+            app:changeable="false"
             app:empty_color="@android:color/white"
-            app:progress_color="#00f0f0"
+            app:progress_color="#ffea00"
 
             />
 
@@ -317,6 +348,8 @@
             android:text="@string/job_description"
             android:textColor="@android:color/white"
             android:textSize="15sp"
+            android:textAlignment="textStart"
+            android:gravity="start"
             />
 
         <TextView
@@ -338,7 +371,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         app:layout_constraintTop_toBottomOf="@id/expandable_part"
-        app:layout_constraintStart_toStartOf="@id/employee_home_item_v1"
+        app:layout_constraintStart_toStartOf="@id/employee_home_item_v11"
         app:layout_constraintEnd_toEndOf="@id/employee_home_item_v6"
         app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/apply_for_job"
