--- a/app/src/main/res/layout/fragment_employer_home.xml
+++ b/app/src/main/res/layout/fragment_employer_home.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,6 +10,73 @@
     android:background="@android:color/white"
     >
 
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".9"
+        android:id="@+id/employe_rec_v1"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".75"
+        android:id="@+id/employe_rec_v2"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".8"
+        android:id="@+id/employe_rec_h1"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".9"
+        android:id="@+id/employe_rec_h2"
+        />
+
+
+    <ImageButton
+        app:layout_constraintStart_toStartOf="@id/employe_rec_v2"
+        app:layout_constraintTop_toBottomOf="@id/employe_rec_h1"
+        android:id="@+id/upload_job_btn"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/ic_plus"
+        app:layout_constraintHeight_percent=".07"
+        app:layout_constraintWidth_percent=".13"
+        android:background="@drawable/plus_btn_effect"
+        android:padding="15dp"
+        android:translationZ="5dp"
+        android:elevation="10dp"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/employer_home_recycler_view"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:background="@android:color/transparent"
+        />
+
+    <include
+        android:id="@+id/upload_job_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        layout="@layout/upload_job"
+        android:visibility="gone"
+
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
